--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-google-material-icons": "^1.0.4",
-    "reactstrap": "^8.4.0"
+    "reactstrap": "^8.4.0",
+    "react-scripts": "^3.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
