--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactexpress",
+  "name": "project",
   "version": "1.0.0",
   "description": "Boilerplate react and express",
   "main": "server.js",
