--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "reactstrap": "^8.4.0"
+    "react-google-material-icons": "^1.0.4",
+    "react-scripts": "^3.3.1",
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
