--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "concurrently": "^5.0.2",
+    "concurrently": "^5.1.0",
+    "eslint-plugin-flowtype": "^3.13.0",
     "express": "^4.17.1",
+    "jquery": "^1.9.1",
+    "material-design-icons": "^3.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-google-material-icons": "^1.0.4",
-    "reactstrap": "^8.4.0",
-    "react-scripts": "^3.3.1"
+    "react-scripts": "^3.3.1",
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
