--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-google-material-icons": "^1.0.4",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
