--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "concurrently": "^5.1.0",
     "eslint-plugin-flowtype": "^3.13.0",
     "express": "^4.17.1",
-    "jquery": "^1.9.1",
+    "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "material-design-icons": "^3.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -32,5 +33,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
+  
   }
 }
