--- a/package.json
+++ b/package.json
@@ -1,47 +1,37 @@
 {
   "name": "project",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Boilerplate react and express",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
+  "author": "Vanz Serret",
+  "license": "MIT",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "react-router-dom": "^4.3.1",
-    "material-design-icons": "^3.0.1",
-    "axios": "^0.18.0",
     "bootstrap": "^4.4.1",
+    "concurrently": "^5.1.0",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "material-design-icons": "^3.0.1",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
     "react-google-material-icons": "^1.0.4",
     "react-image-file-resizer": "^0.2.1",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "api": "node api/server.js"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all",
-      "not ie <=11"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "proxy": "http://localhost:5000"
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
