--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "eslint-plugin-flowtype": "^3.13.0",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
-    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.11",
+    "jsonwebtoken": "^8.4.0",
+    "cors": "^2.8.5",
     "material-design-icons": "^3.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
