--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "Vanz Serret",
+  "author": "Group project",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.4.1",
@@ -21,17 +21,7 @@
     "mongoose": "^5.8.11",
     "jsonwebtoken": "^8.4.0",
     "cors": "^2.8.5",
-    "material-design-icons": "^3.0.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "react-google-material-icons": "^1.0.4",
-    "react-image-file-resizer": "^0.2.1",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.1",
-    "reactstrap": "^8.4.1",
-    "redux": "^4.0.5"
+    "material-design-icons": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
