--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix client",
+    "client": "cd ../ && cd client && npm start && cd -",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Group project",
@@ -20,8 +20,7 @@
     "jquery": "^3.4.1",
     "mongoose": "^5.8.11",
     "jsonwebtoken": "^8.4.0",
-    "cors": "^2.8.5",
-    "material-design-icons": "^3.0.1"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
