--- a/client/package.json
+++ b/client/package.json
@@ -6,17 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "react-router-dom": "^4.3.1",
-    "material-design-icons": "^3.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.4.1",
+    "material-design-icons": "^3.0.1",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
     "react-google-material-icons": "^1.0.4",
     "react-image-file-resizer": "^0.2.1",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "3.3.0",
+    "react-star-rating-component": "^1.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5"
   },
