--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.3.0",
+    "react-shopping-cart": "^1.8.32",
     "react-star-rating-component": "^1.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5"
