--- a/client/package.json
+++ b/client/package.json
@@ -45,5 +45,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "tachyons": "^4.10.0"
+  }
 }
