--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-google-material-icons": "^1.0.4",
     "react-image-file-resizer": "^0.2.1",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.3.0",
     "react-shopping-cart": "^1.8.32",
