--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.4.1",
+    "jwt-decode": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
