--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.3.0",
     "react-star-rating-component": "^1.4.1",
+    "react-window": "^1.8.5",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "ts-loader": "^6.2.1"
