--- a/package.json
+++ b/package.json
@@ -22,5 +22,17 @@
   "bugs": {
     "url": "https://github.com/vrivero09/SWE-Group-20-project/issues"
   },
-  "homepage": "https://github.com/vrivero09/SWE-Group-20-project#readme"
+  "homepage": "https://github.com/vrivero09/SWE-Group-20-project#readme",
+  "dependencies": {
+    "concurrently": "^5.3.0",
+    "core-js": "^3.6.5",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4",
+    "path": "^0.12.7",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3"
+  }
 }
