--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "material-ui-icons": "^1.0.0-beta.36",
+    "mdbreact": "^4.27.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-sidebar": "0.0.1",
@@ -31,7 +32,8 @@
     "react-window": "^1.8.5",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
-    "ts-loader": "^6.2.1"
+    "ts-loader": "^6.2.1",
+    "webpack": "^4.44.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,6 +43,7 @@
     "postinstall": "react-scripts build",
     "api": "node api/server.js"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -56,10 +59,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000",
-  "devDependencies": {
-    "eslint-plugin-react-hooks": "0.0.0-d28bd2994",
-    "tachyons": "^4.10.0"
   }
 }
