--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "availity-reactstrap-validation": "^2.6.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.4.1",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
     "jwt-decode": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "material-ui-icons": "^1.0.0-beta.36",
