--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "client/app.js",
   "engines": {
     "node": "14.x"
-  },  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  },  
+  "scripts": {
+    "start": "node server/server.js",
+    "server": "nodemon server/server.js",
+    "client": "npm start --prefix client",
+    "heroku-postbuild": "cd client && npm install && npm run build",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
