--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "client/app.js",
   "engines": {
     "node": "14.x"
-  },  
+  },
   "scripts": {
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
@@ -29,6 +29,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
+    "package-lock.json": "^1.0.0",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
