--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "project",
   "version": "1.0.0",
+  "main": "app.js",
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
