--- a/package.json
+++ b/package.json
@@ -35,5 +35,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
