--- a/package.json
+++ b/package.json
@@ -1,28 +1,8 @@
 {
   "name": "swe-group-20-project",
   "version": "1.0.0",
-  "description": "deploying to heroku",
+  "description": "Deploying to Heroku",
   "main": "client/app.js",
-  "engines": {
-    "node": "14.x"
-  },
-  "scripts": {
-    "start": "node server/server.js",
-    "server": "nodemon server/server.js",
-    "client": "npm start --prefix client",
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vrivero09/SWE-Group-20-project.git"
-  },
-  "author": "VRS",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/vrivero09/SWE-Group-20-project/issues"
-  },
-  "homepage": "https://github.com/vrivero09/SWE-Group-20-project#readme",
   "dependencies": {
     "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
@@ -37,5 +17,17 @@
     "react-scripts": "^3.4.3"
   },
   "devDependencies": {},
-  "keywords": []
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vrivero09/SWE-Group-20-project.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vrivero09/SWE-Group-20-project/issues"
+  },
+  "homepage": "https://github.com/vrivero09/SWE-Group-20-project#readme"
 }
