--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
