--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "material-design-icons": "^3.0.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "mdbreact": "^4.27.0",
+    "mongoose": "^5.10.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-sidebar": "0.0.1",
