--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "deploying at heroku",
   "main": "client/app.js",
   "engines": {
-    "node": "14.x"
+    "node": "14.x",
+    "npm": "6.x"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
