--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mongoose": "^5.10.0",
     "nodemon": "^2.0.4",
     "package-lock.json": "^1.0.0",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.3",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "webpack": "^4.44.1"
   },
   "devDependencies": {},
