--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "6.x"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
