added webpack CLI

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "webpack": "^4.44.1"
+    "webpack": "^4.44.1",
+    "wepack-cli": "0.0.1-security"
   },
   "devDependencies": {},
   "scripts": {
