--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd ../ && cd client && npm start && cd -",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Group project",
