--- a/client/package.json
+++ b/client/package.json
@@ -2,37 +2,6 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.0.0",
-    "availity-reactstrap-validation": "^2.6.1",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.4.1",
-    "jwt-decode": "^2.2.0",
-    "material-design-icons": "^3.0.1",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "mdbreact": "^4.25.6",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-bootstrap-sidebar": "0.0.1",
-    "react-dom": "^16.12.0",
-    "react-google-material-icons": "^1.0.4",
-    "react-image-file-resizer": "^0.2.1",
-    "react-medium-image-zoom": "^4.3.0",
-    "react-redux": "^7.1.3",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.3.0",
-    "react-star-rating-component": "^1.4.1",
-    "react-window": "^1.8.5",
-    "reactstrap": "^8.4.1",
-    "redux": "^4.0.5",
-    "ts-loader": "^6.2.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -60,5 +29,33 @@
   "devDependencies": {
     "eslint-plugin-react-hooks": "0.0.0-d28bd2994",
     "tachyons": "^4.10.0"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
+    "jwt-decode": "^3.1.2",
+    "material-design-icons": "^3.0.1",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "mdbreact": "^5.2.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-bootstrap-sidebar": "^0.0.1",
+    "react-dom": "^18.2.0",
+    "react-google-material-icons": "^1.0.4",
+    "react-image-file-resizer": "^0.4.8",
+    "react-medium-image-zoom": "^5.1.2",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.5.0",
+    "react-router-dom": "^6.5.0",
+    "react-scripts": "^5.0.1",
+    "react-star-rating-component": "^1.4.1",
+    "react-window": "^1.8.8",
+    "reactstrap": "^8.10.1",
+    "redux": "^4.2.0",
+    "ts-loader": "^9.4.2"
   }
 }
