--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "@testing-library/react": "^13.4.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.15.0",
     "jwt-decode": "^3.1.2",
     "material-design-icons": "^3.0.1",
     "material-ui-icons": "^1.0.0-beta.36",
