--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "eslint-plugin-flowtype": "^8.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.15.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.1"
   }
